fixed overlap with nav bar and added menu for the first website

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,7 @@
     width: 100vw;
     background-color: #001935;
     top: 0;
+    z-index: 1000;
 }
 
 
@@ -703,6 +704,35 @@ img {
     background-color: #253d57;
 }
 
+.outside-dropdown {
+    position: relative;
+}
+
+.dropdown {
+    position: relative;
+}
+
+.dropdown-menu {
+    position: absolute;
+    top: calc(100% + 0.9rem);
+    display: none;
+    background-color: white;
+    width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    height: 320px;
+    width: 280px;
+    border: 1px solid #e6e6e6;
+    border-radius: 2px;
+    margin-left: -25px;
+
+}
+
+.dropdown:hover .dropdown-menu {
+    display: flex;
+    flex-direction: column;
+}
+
 body {
     background-color: #001935;
     margin: 0;
@@ -726,5 +756,10 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.random {
+    /* height:400px; */
+    margin-top: 400px;
 }
 
